--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size:cover; */
-  /* background-color: rgb(243, 245, 245); */
+  background-color: #d1d1d1;
 }
 
 /* .sign-img{
