--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size:cover; */
-  background-color: #d1d1d1;
+  /* background-color: #fcf9f9; */
 }
 
 /* .sign-img{
